; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_arm_gnu.c_archinfo.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_arm_gnu.c_archinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@R_ANAL_ARCHINFO_ALIGN = common dso_local global i32 0, align 4
@R_ANAL_ARCHINFO_MAX_OP_SIZE = common dso_local global i32 0, align 4
@R_ANAL_ARCHINFO_MIN_OP_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32)* @archinfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @archinfo(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @R_ANAL_ARCHINFO_ALIGN, align 4
  %8 = icmp eq i32 %6, %7
  br i1 %8, label %9, label %19

9:                                                ; preds = %2
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %11 = icmp ne %struct.TYPE_3__* %10, null
  br i1 %11, label %12, label %18

12:                                               ; preds = %9
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = icmp eq i32 %15, 16
  br i1 %16, label %17, label %18

17:                                               ; preds = %12
  store i32 2, i32* %3, align 4
  br label %39

18:                                               ; preds = %12, %9
  store i32 4, i32* %3, align 4
  br label %39

19:                                               ; preds = %2
  %20 = load i32, i32* %5, align 4
  %21 = load i32, i32* @R_ANAL_ARCHINFO_MAX_OP_SIZE, align 4
  %22 = icmp eq i32 %20, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %19
  store i32 4, i32* %3, align 4
  br label %39

24:                                               ; preds = %19
  %25 = load i32, i32* %5, align 4
  %26 = load i32, i32* @R_ANAL_ARCHINFO_MIN_OP_SIZE, align 4
  %27 = icmp eq i32 %25, %26
  br i1 %27, label %28, label %38

28:                                               ; preds = %24
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %30 = icmp ne %struct.TYPE_3__* %29, null
  br i1 %30, label %31, label %37

31:                                               ; preds = %28
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = icmp eq i32 %34, 16
  br i1 %35, label %36, label %37

36:                                               ; preds = %31
  store i32 2, i32* %3, align 4
  br label %39

37:                                               ; preds = %31, %28
  store i32 4, i32* %3, align 4
  br label %39

38:                                               ; preds = %24
  store i32 4, i32* %3, align 4
  br label %39

39:                                               ; preds = %38, %37, %36, %23, %18, %17
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
